[gd_scene load_steps=4 format=3 uid="uid://m5t63qv3eww1"]

[ext_resource type="Script" path="res://Scripts/RemadeScripts/function_spawner.gd" id="1_genwh"]
[ext_resource type="Texture2D" uid="uid://bduali8pfbegp" path="res://Assets/Sprites/attack_point.png" id="3_ax4sq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ldryw"]
radius = 8.0

[node name="function_spawner" type="Node2D"]
top_level = true
script = ExtResource("1_genwh")

[node name="function_head" type="Node2D" parent="."]

[node name="head" type="Sprite2D" parent="function_head"]
z_index = 3
texture = ExtResource("3_ax4sq")

[node name="body" type="Line2D" parent="function_head"]
top_level = true
z_index = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Timer" type="Timer" parent="function_head/body"]
wait_time = 0.2

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="function_head"]
remote_path = NodePath("../../collider/CollisionShape2D")

[node name="collider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collider"]
shape = SubResource("CircleShape2D_ldryw")

[connection signal="timeout" from="function_head/body/Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="collider" to="." method="_on_collider_area_entered"]
